src/test/deca/context/invalid/created/Objet/ProtectedSelectionExtends.deca
// Description:
// Test d'accès à un attribut protégé via un extends (condition 2 Sélection)
// Resultats:
// PrivateSelectionExtends.deca:8:17: Error: Unauthorized access to the protected field 'x'

class A {
    protected int x;
}

class X {
    void m(){
        a = new A();
        println(a.x);
    }
}

class B extends A {
    int getX(A a) {
        return a.x;
    }
}


